--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@babel/cli": "^7.14.3",
     "@babel/core": "^7.14.3",
     "@babel/node": "^7.14.2",
+    "@babel/plugin-proposal-decorators": "^7.14.2",
     "@babel/preset-env": "^7.14.2",
     "@babel/preset-typescript": "^7.13.0",
     "@types/express": "^4.17.12",
     "@types/node": "^15.6.1",
     "@types/webpack": "^5.28.0",
     "babel-plugin-module-resolver": "^4.1.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
@@ -37,6 +39,8 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "reflect-metadata": "^0.1.13",
+    "typedi": "^0.10.0"
   }
 }
